Информация по типам ДЦ

--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -40,7 +40,19 @@
     [Электронный ресурс]. --
     Электрон. текстовые данные (55237 bytes) -- 
     Режим доступа: https://github.com/Amet13/openvz-tutorial
-    
+
+\bibitem{oracle-db}
+    Каталог программных продуктов семейства Oracle  
+    [Электронный ресурс]. --
+    Электрон. текстовые данные (11126315 bytes) -- 
+    Режим доступа: http://oracle.ocs.ru/files/catalog\_Oracle\_Database\_12C.pdf
+
+\bibitem{dc-tier}
+    Tier: уровни надежности ЦОД и что из этого следует 
+    [Электронный ресурс]. --
+    Электрон. текстовые данные (38916 bytes) -- 
+    Режим доступа: http://www.aboutdc.ru/page/390.php     
+
 \bibitem{hp-openvz-xen}
     Performance Evaluation of Virtualization Technologies for Server Consolidation
     [Электронный ресурс]. --
