--- a/inc/1-pz.tex
+++ b/inc/1-pz.tex
@@ -15,9 +15,9 @@
 Аппаратное обеспечение должно базироваться в ДЦ ориентированным на требования стандарта TIA-942, состоящий из информационной, телекоммуникационной и инженерной инфраструктуры, с возможностью аренды выделенного сервера и аппаратной защиты от DDoS-атак, а также поддержкой аппаратного RAID.
 Минимальные характеристики выделенного сервера виртуализации:
 \begin{itemize}
-    \item 8xIntel Xeon E5430 @ 2.66GHz;
-    \item Минимальный объем ОЗУ 32 Гб (гигабайт);
-    \item Минимум 1 Тб (терабайт) места на жестком диске;
+    \item 8xIntel\textregistered~Xeon E5430 @ 2.66GHz;
+    \item Минимальный объем ОЗУ 32 Гб;
+    \item Минимум 1 Тб места на жестком диске;
     \item Аппаратный RAID 1;
     \item ОС Debian 7 GNU/Linux или CentOS 6.5 и выше;
     \item Интернет-канал с пропускной способностью не менее 100 Мб/с;
