--- a/inc/2-literature.tex
+++ b/inc/2-literature.tex
@@ -11,6 +11,7 @@
 Примерно на 15-20 страниц.
 \begin{itemize}
   \item облака
+  \item ДЦ, типы для чего нужны tier iii
   \item виртуализация
   \item виды виртуализации
   \item контейнерная виртуализация
@@ -28,7 +29,7 @@
 В ней был свой выделенный сервер баз данных, и пользователи на <<толстых>> клиентах, разгружая сервер БД.
 Затем появилась еще более современная архитектура --- многоуровневая (или трехуровневая), где логика приложений была вынесена на отдельных компьютер, называемый сервером приложений, а пользователи работали на <<тонких>> клиентах через web-браузеры.
 Большинство приложений сегодня выполнено именно в этой архитектуре.
-Она подразумеват развертывание всей IT-инфраструктуры на территории заказчика.
+Она подразумеват развертывание всей IT-инфраструктуры на территории заказчика. \cite{oracle-db}
 
 Облачные вычисления --- это следующий шаг в эволюции архитектуры построения информационных систем.
 Благодаря огромным преимуществам этого подхода очевидно, что многие информационные системы в ближайшее время будут перенесены в облако.
@@ -38,6 +39,49 @@
 IT-директор американского правительства Вивек Кундра, в феврале 2011 года опубликовал стратегию стратегию переноса части информационных систем в облако.
 Документ под названием <<Federal Cloud Computing Strategy>> четко описывает порядок и сроки переноса. 
 Цель работ --- уменьшение сложности и повышени управляемости IT, увеличение нагрузки оборудования до 70-80\%, уменьшение количества центров обработки данных.
+
+Основным требованием, предъявляемым к центрам обработки данных является отказоустойчивость.
+При этом подразумевается отключение ЦОД как на время планово-предупредительных работ и профилактики оборудования, так и внеплановых аварийных ситуаций.
+
+Классификация Tier описывает надежность функционирования ЦОД и является необходимой для компаний, как желающих построить свой ЦОД, так и для арендующих чужие вычислительные мощности.
+В зависимости от критичности бизнеса, в зависимости от потерь, которые понесет компания в случае остановки бизнес-процессов выбирается тот или иной уровень надежности.
+В свою очередь, высокий уровень надежности требует высоких материальных и эксплуатационных затрат, поэтому и стоимость вычислительных мощностей зависит от уровня надежности ЦОД. \cite{dc-tier}
+
+На сегодняшний день существует четыре уровня надежности ЦОД названные Tier I, Tier II, Tier III и Tier IV, которые были введены огранизацией Uptime Institue (Институт бесперебойных процессов, США):
+\begin{itemize}
+  \item Tier I: время простоя 28,8 часов в год, коэффициент отказоустойчивости 99,671\%;
+  \item Tier II: 22,0 часа в год, 99,749\%;
+  \item Tier III: 1,6 часа в год, 99,982\%;
+  \item Tier IV: 0,4 часа в год, 99,995\%.
+\end{itemize}
+
+ЦОД уровня Tier I (базовый уровень) подвержен нарушениями работы как от плановых, так и от внеплановых действий.
+Применение фальшпола, источников бесперебойного питания (ИБП), дизель-генераторных установок (ДГУ) не обязательно.
+Если ИБП и ДГУ используются, то выбираются более простые модели, без резерва, с множеством точек отказа.
+Возможны самопроизвольные отказы оборудования.
+К простою ЦОД также приведут ошибки в действиях обслуживающего персонала.
+В таких ЦОД отсутствует защита от случайных и намеренных событий, обусловленных действиями человека.
+
+В ЦОД уровня Tier II (с резервированными компонентами) время простоя возможно в связи с плановыми и внеплановыми работами, а также аварийными ситуациями, однако оно сокращено благодаря внедрению одной резервной единицы оборудования в каждой системе.
+Таким образом, системы кондиционирования, ИБП и ДГУ имют одну резервную единицу, тем не менее, профилактические работы требуют отключения ЦОД.
+В центрах обработки данных с резервированными компонентами требуется наличие минимальных защитных мер от влияния человека.
+
+Третий уровень надежности (уровень с возможность параллельного проведения ремонтных работ) требует осуществления любой плановой деятельности без остановки ЦОД.
+Под плановыми работами подразумевается профилактическое и программируемое техническое обслуживание, ремонт и замена компонентов, добавления или удаление компонентов, а также их тестирование.
+В таком случае необходимо иметь резерв, благодаря которому можно пустить всю нагрузку по другому пути, во время работ на первом.
+Для реализации Tier III необходима схема резервирования блоков схем кондиционирования, ИБП, ДГУ N+1, также требуется наличие двух комплектов трубопроводов для системы кондиционирования, построенной на основе чиллера (холодильной машины).
+Строительные требования обязывают сохранять работоспособность ЦОД при большинстве случаев намеренных и случайных вмешательств человека.
+Также следует предусмотреть резервные входы, дублирующие подъездные пути, контроль доступа, отсутствие окон, защиту от электромагнитного изучения.
+
+Четвертый уровень надежности ЦОД (отказоустойчивый) характеризуется безостановочной работой при проведении плановых мероприятий и способен выдержать один серьезный отказ без последствий для критически важной нагрузки.
+Необходим дублированный подвод питания, резервирование системы кондиционирования и ИБП по схеме 2(N+1).
+Для дизель-генераторных установок необходима отдельная площадка с зоной хранения топлива.
+Tier IV требует защиту от всех потенциальных проблем в связи с человеческим фактором.
+Регламентированы избыточные средства защиты от намеренных или случайных действий человека.
+Учтено влияние сейсмоявлений, потопов, пожаров, ураганов, штормов, терроризма.
+
+%Существует два основных стандарта центров обработки данных: TIA 942 Uptime Institute.
+%Эти документы регламентируют уров
 
 Облачные вычисления --- это сервисная вычислительная модель, при которой:
 \begin{itemize}
@@ -68,7 +112,7 @@ IT-директор американского правительства Вив
 \end{itemize}
 
 Когда производится виртуализация, существует не один способ ее осуществления.
-Фактически есть несколько путей, с помощью которых достигаются одинаковые результаты через разные уровни абстракции:
+Фактически есть несколько путей, с помощью которых достигаются одинаковые результаты через разные уровни абстракции: \cite{openvz-tutorial}
 \begin{itemize}
   \item Эмуляция оборудования;
   \item Полная виртуализация;
