Включил aspell-ru, исправил опечатки

--- a/inc/1-pz.tex
+++ b/inc/1-pz.tex
@@ -12,7 +12,7 @@
     \item Использование инфраструктуры в бизнесе для предоставления облачных услуг клиентам.
 \end{itemize}
 
-Аппаратное обеспечение должно базироваться в ДЦ ориентированным на требования стандарта TIA-942, состоящий из информационной, телекоммуникационной и инженерной инфраструктуры, с возможностью аренды выделенного сервера и аппаратной защиты от DDoS-атак, а также поддержкой аппаратного RAID.
+Аппаратное обеспечение должно базироваться в дата-центре ориентированным на требования стандарта Tier III, состоящий из информационной, телекоммуникационной и инженерной инфраструктуры, с возможностью аренды выделенного сервера и аппаратной защиты от DDoS-атак, а также поддержкой аппаратного RAID.
 Минимальные характеристики выделенного сервера виртуализации:
 \begin{itemize}
     \item 2xIntel\textregistered~Xeon E5430 @ 2.66GHz;
@@ -32,7 +32,7 @@
 \begin{itemize}
     \item Выбор технологии виртуализации;
     \item Выбор физического сервера на основе услуги IaaS в ДЦ;
-    \item Приоборетение лицензий на ПО;
+    \item Приобретение лицензий на программное обеспечение;
     \item Приобретение подсетей IP-адресов;
     \item Создание и подключение инфраструктуры мониторинга, платежной системы (биллинга), резервного копирования;
     \item Реализация аппаратной защиты от DDoS-атак;
