--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -39,7 +39,7 @@
     Руководство по созданию и управлению контейнерами на базе OpenVZ 
     [Электронный ресурс]. --
     Электрон. текстовые данные (55237 bytes) -- 
-    Режим доступа: https://github.com/Amet13/openvz-tutorial
+    Режим доступа: https://github.com/Amet13/openvz-tutorial/blob/master/main.pdf
 
 \bibitem{oracle-db}
     Каталог программных продуктов семейства Oracle
