--- a/main.tex
+++ b/main.tex
@@ -27,6 +27,7 @@
 % Приложения
 %\input{inc/a-app}
 
-\input{inc/act} % Акт внедрения
+%\input{inc/act} % Акт внедрения
+\includepdf{inc/act}
 
 \end{document}
