Расширил информацию о типах виртуализации, добавил типичных представителей

--- a/main.tex
+++ b/main.tex
@@ -27,7 +27,6 @@
 % Приложения
 %\input{inc/a-app}
 
-%\input{inc/act} % Акт внедрения
-\includepdf{inc/act}
+\includepdf{inc/act} % Акт внедрения
 
 \end{document}
