--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -19,7 +19,7 @@
     ГОСТ 19.701-90, ЕСПД <<Схемы алгоритмов, программ, данных и систем. 
     Условные обозначения и правила выполнения>>. 
     Дата введения: 01.01.1992. -- М: Изд-во стандартов, 1991. -- 26 с.
-    
+
 \bibitem{dstu-gost} 
     ДСТУ 3008-95 <<Документация. Отчеты в сфере науки и техники. 
     Структура и правила оформления>>. 
@@ -64,7 +64,7 @@
     [Электронный ресурс]. --
     Электрон. текстовые данные (131599 bytes) -- 
     Режим доступа: https://xakep.ru/2011/08/27/56244/
-    
+
 \bibitem{ixbt-virt}
     Виртуализация: новый подход к построению IT-инфраструктуры
     [Электронный ресурс]. --
@@ -82,19 +82,19 @@
     [Электронный ресурс]. --
     Электрон. текстовые данные (839355 bytes) -- 
     Режим доступа: http://www.opennet.ru/docs/RUS/virtuozzo/virtuozzo-linux.html.gz
-    
+
 \bibitem{ibm-virt}
     Виртуальный Linux. Обзор методов виртуализации, архитектур и реализаций
     [Электронный ресурс]. --
     Электрон. текстовые данные (109051 bytes) -- 
     Режим доступа: http://www.ibm.com/developerworks/ru/library/l-linuxvirt/index.html
-    
+
 \bibitem{ibm-hypervisors}
     Гипервизоры, виртуализация и облако: О гипервизорах, виртуализации систем и о том, как это работает в облачной среде
     [Электронный ресурс]. --
     Электрон. текстовые данные (87662 bytes) -- 
     Режим доступа: http://www.ibm.com/developerworks/ru/library/cl-hypervisorcompare/
-    
+
 \bibitem{opennet-containers}
     Обзор достижений контейнерной изоляции за последние два года
     [Электронный ресурс]. --
@@ -106,13 +106,37 @@
     [Электронный ресурс]. --
     Электрон. текстовые данные (37869 bytes) -- 
     Режим доступа: http://openvz.org/Performance
-    
+
 \bibitem{lxc-openvz}
     Контейнеризация на Linux в деталях -- LXC и OpenVZ Часть 2
     [Электронный ресурс]. --
     Электрон. текстовые данные (186899 bytes) -- 
     Режим доступа: http://habrahabr.ru/company/FastVPS/blog/209084/
-    
+
+\bibitem{qemu-ibm}
+    Эмуляция систем с помощью QEMU
+    [Электронный ресурс]. --
+    Электрон. текстовые данные (84008 bytes) --
+    Режим доступа:  http://www.ibm.com/developerworks/ru/library/l-qemu/
+
+\bibitem{kvm-ibm}
+    Гипервизоры, виртуализация и облако: Анализ гипервизора KVM
+    [Электронный ресурс]. --
+    Электрон. текстовые данные (79196 bytes) --
+    Режим доступа: http://www.ibm.com/developerworks/ru/library/cl-hypervisorcompare-kvm/
+
+\bibitem{xen-xguru}
+    Руководство пользователя Xen v3.0
+    [Электронный ресурс]. --
+    Электрон. текстовые данные (272945 bytes) --
+    Режим доступа: http://xgu.ru/xen/manual/
+
+\bibitem{lxc}
+    Виртуализация на уровне ОС: теория и практика LXC
+    [Электронный ресурс]. --
+    Электрон. текстовые данные (118259 bytes) --
+    Режим доступа: http://creativeyp.com/568-virtualizaciya-na-urovne-os-teoriya-i-praktika-lxc.html
+
 \end{thebibliography}
 \endgroup
 
