--- a/inc/1-pz.tex
+++ b/inc/1-pz.tex
@@ -12,26 +12,26 @@
     \item Использование инфраструктуры в бизнесе для предоставления облачных услуг клиентам.
 \end{itemize}
 
-Аппаратное обеспечение должно базироваться в дата-центре ориентированным на требования стандарта Tier III, состоящий из информационной, телекоммуникационной и инженерной инфраструктуры, с возможностью аренды выделенного сервера и аппаратной защиты от DDoS-атак, а также поддержкой аппаратного RAID.
-Минимальные характеристики выделенного сервера виртуализации:
+Аппаратное обеспечение должно базироваться в дата-центре ориентированным на требования стандарта Tier III, состоящий из информационной, телекоммуникационной и инженерной инфраструктуры, с возможностью аренды выделенных серверов и аппаратной защиты от DDoS-атак, а также поддержкой аппаратного RAID.
+Минимальные характеристики выделенных серверов виртуализации:
 \begin{itemize}
     \item 2xIntel\textregistered~Xeon E5430 @ 2.66GHz;
-    \item Минимальный объем ОЗУ 32 Гб;
-    \item Минимум 1 Тб места на жестком диске;
-    \item Аппаратный RAID 1;
-    \item ОС Debian 7 GNU/Linux или CentOS 6.5 и выше;
+    \item Минимальный объем ОЗУ 8 Гб;
+    \item Минимум 500 Гб места на жестком диске;
+    \item Поддержка аппаратного RAID;
+    \item ОС не ниже Debian 7 GNU/Linux или CentOS 6.5;
     \item Интернет-канал с пропускной способностью не менее 100 Мб/с;
-    \item Возможность добавления дополнительных IP-адресов к серверу;
-    \item Возможность удаленного доступа к серверу посредством IPMI.
+    \item Возможность добавления дополнительных IP-адресов к серверам;
+    \item Возможность удаленного доступа к серверам посредством IPMI (Intelligent Platform Management Interface).
 \end{itemize}
 
-Следует предусмотреть возможность развертывания дополнительных виртуальных серверов, для организации DNS-серверов и систем мониторинга.
+Следует предусмотреть возможность развертывания дополнительных виртуальных серверов, для организации DNS-серверов, систем мониторинга, биллинга.
 Также необходимо предусмотреть наличие системы хранения данных (СХД) для резервного копирования.
 
 Для разработки виртуальной инфраструктуры необходимо реализовать следующие этапы:
 \begin{itemize}
-    \item Выбор технологии виртуализации;
-    \item Выбор физического сервера на основе услуги IaaS в ДЦ;
+    \item Выбор технологий виртуализации;
+    \item Выбор физических серверов на основе услуги IaaS в ДЦ;
     \item Приобретение лицензий на программное обеспечение;
     \item Приобретение подсетей IP-адресов;
     \item Создание и подключение инфраструктуры мониторинга, платежной системы (биллинга), резервного копирования;
