Обновил информацию по namespaces

--- a/inc/1-pz.tex
+++ b/inc/1-pz.tex
@@ -25,7 +25,7 @@
     \item Возможность удаленного доступа к серверам посредством IPMI (Intelligent Platform Management Interface).
 \end{itemize}
 
-Следует предусмотреть возможность развертывания дополнительных виртуальных серверов, для организации DNS-серверов, систем мониторинга, биллинга.
+Следует предусмотреть возможность развертывания дополнительных виртуальных серверов, для организации DNS-серверов, системы мониторинга и платежной системы.
 Также необходимо предусмотреть наличие системы хранения данных (СХД) для резервного копирования.
 
 Для разработки виртуальной инфраструктуры необходимо реализовать следующие этапы:
