--- a/inc/1-pz.tex
+++ b/inc/1-pz.tex
@@ -6,27 +6,27 @@
 
 Виртуальная инфраструктура должна обладать следующими характеристиками:
 \begin{itemize}
-    \item Использование продуктов, распространяющихся под свободной лицензией (GNU GPL) для организации инфраструктуры;
+    \item Использование, по возможности, продуктов, распространяющихся под свободной лицензией (GNU GPL) для организации инфраструктуры;
     \item Устранение единой точки отказа при проектировании инфраструктуры;
     \item Защита от распределенных атак на отказ (DDoS);
     \item Использование инфраструктуры в бизнесе для предоставления облачных услуг клиентам.
 \end{itemize}
 
-Аппаратное обеспечение должно базироваться в дата-центре ориентированным на требования стандарта Tier III, состоящий из информационной, телекоммуникационной и инженерной инфраструктуры, с возможностью аренды выделенных серверов и аппаратной защиты от DDoS-атак, а также поддержкой аппаратного RAID.
-Минимальные характеристики выделенных серверов виртуализации:
+Аппаратное обеспечение должно базироваться в дата-центре ориентированным на требования стандарта Tier III, состоящего из информационной, телекоммуникационной и инженерной инфраструктуры, с возможностью аренды выделенных серверов и аппаратной защиты от DDoS-атак, а также поддержкой аппаратного RAID.
+Рекомендуемые характеристики выделенных серверов виртуализации:
 \begin{itemize}
     \item 2xIntel\textregistered~Xeon E5430 @ 2.66GHz;
-    \item Минимальный объем ОЗУ 8 Гб;
-    \item Минимум 500 Гб места на жестком диске;
+    \item Минимальный объем ОЗУ 32 Гб;
+    \item Минимум 960 Гб места на жестком диске (SSD);
     \item Поддержка аппаратного RAID;
-    \item ОС не ниже Debian 7 GNU/Linux или CentOS 6.5;
+    \item Операционная система не ниже Debian 7 GNU/Linux или CentOS 6.5;
     \item Интернет-канал с пропускной способностью не менее 100 Мб/с;
     \item Возможность добавления дополнительных IP-адресов к серверам;
     \item Возможность удаленного доступа к серверам посредством IPMI (Intelligent Platform Management Interface).
 \end{itemize}
 
 Следует предусмотреть возможность развертывания дополнительных виртуальных серверов, для организации DNS-серверов, системы мониторинга и платежной системы.
-Также необходимо предусмотреть наличие системы хранения данных (СХД) для резервного копирования.
+Также необходимо предусмотреть наличие системы хранения данных (СХД) для резервных копий, а также расширение дискового пространства на выделенных серверах.
 
 Для разработки виртуальной инфраструктуры необходимо реализовать следующие этапы:
 \begin{itemize}
