Правки от научрука

--- a/inc/0-intro.tex
+++ b/inc/0-intro.tex
@@ -7,11 +7,11 @@
 Определение и использование стандартов на каждом этапе работы, при размещении в стойках от отдельных компьютеров до отдельных кабелей и от рядовых операций до безопасности, позволяет сэкономить значительное время и правильно организовать процессы.
 
 Чтобы спланировать и выполнить план, не нужны гигантские усилия.
-Небольшая команда из IT-специалистов и бизнес-пользователей может создать обоснованный план и организовать свою работу в облачной инфраструктуре.
-Эта выделенная группа может намного эффективнее построить и управлять нестандартной облачной инфраструктурой, чем если компании будут просто продолжать добавлять дополнительные серверы и сервисы для поддержки центра обработки данных (ЦОД).
+Небольшая команда из специалистов и бизнес-пользователей может создать обоснованный план и организовать свою работу в облачной инфраструктуре.
+Эта выделенная группа может намного эффективнее построить и управлять нестандартной облачной инфраструктурой, чем если компании будут просто продолжать добавлять дополнительные серверы и сервисы для поддержки центра обработки данных.
 
 IaaS (Infrastructure as a Service) --- это предоставление пользователю компьютерной и сетевой инфраструктуры и их обслуживание как услуги в форме виртуализации, то есть виртуальной инфраструктуры.
-Другими словами, на базе физической инфраструктуры дата-центров (ДЦ) или ЦОД провайдер создает виртуальную инфраструктуру, которую предоставляет пользователям как сервис.
+Другими словами, на базе физической инфраструктуры дата-центров (ДЦ) провайдер создает виртуальную инфраструктуру, которую предоставляет пользователям как сервис.
 
 Технология виртуализации ресурсов позволяет физическое оборудование (серверы, хранилища данных, сети передачи данных) разделить между пользователями на несколько частей, которые используются ими для выполнения текущих задач.
 Например, на одном физическом сервере можно запустить сотни виртуальных серверов, а пользователю для решения задач выделить время доступа к ним.
