Перемести акт в другое место

--- a/main.tex
+++ b/main.tex
@@ -8,8 +8,9 @@
 %%% Начало документа
 \begin{document}
 
-\includepdf{pz} % Пояснительная записка
-\includepdf[pages={1,2}]{zadanie} % Задание на диплом
+%\includepdf{pz} % Пояснительная записка
+%\includepdf[pages={1,2}]{zadanie} % Задание на диплом
+% ПЗ и задание пока не утверждено до конца
 
 \tableofcontents % Содержание 
 \clearpage
@@ -17,7 +18,7 @@
 %\input{inc/test} % ТЕСТОВЫЙ РАЗДЕЛ С ПРИМЕРАМИ УДАЛИТЬ ЕГО
 \input{inc/0-intro} % Введение
 \input{inc/1-pz} % Постановка задачи
-\input{inc/2-literature} % Обзор литературных источников
+\input{inc/2-literature} % Обзор современных методов и технологий серверной виртуализации
 %\input{inc/3-analyze} % Системный анализ
 %%% Еще какие-то разделы
 %\input{inc/0-conclusion} % Заключение
@@ -26,6 +27,6 @@
 % Приложения
 %\input{inc/a-app}
 
-\includepdf{inc/act} % Акт внедрения
+%\includepdf{act} % Акт внедрения
 
 \end{document}
