Библиография в порядке упоминания. Ссылки на литературу перед знаком препинания. Добавлены ссылки на изображения. В качестве параметра к изображению указывается метка, для ссылки.

--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -2,6 +2,62 @@
 \renewcommand{\section}[2]{\anonsection{Библиографический список}}
 \begin{thebibliography}{00}
 
+\bibitem{oracle-db}
+    Каталог программных продуктов семейства Oracle
+    [Электронный ресурс]. --
+    Электрон. текстовые данные (11126315 bytes) --
+    Режим доступа: http://oracle.ocs.ru/files/catalog\_Oracle\_Database\_12C.pdf
+
+\bibitem{dc-tier}
+    Tier: уровни надежности ЦОД и что из этого следует
+    [Электронный ресурс]. --
+    Электрон. текстовые данные (38916 bytes) --
+    Режим доступа: http://www.aboutdc.ru/page/390.php
+
+\bibitem{ibm-virt}
+    Виртуальный Linux. Обзор методов виртуализации, архитектур и реализаций
+    [Электронный ресурс]. --
+    Электрон. текстовые данные (109051 bytes) -- 
+    Режим доступа: http://www.ibm.com/developerworks/ru/library/l-linuxvirt/index.html
+
+\bibitem{openvz-tutorial}
+    Руководство по созданию и управлению контейнерами на базе OpenVZ 
+    [Электронный ресурс]. --
+    Электрон. текстовые данные (55237 bytes) -- 
+    Режим доступа: https://github.com/Amet13/openvz-tutorial/blob/master/main.pdf
+
+\bibitem{qemu-ibm}
+    Эмуляция систем с помощью QEMU
+    [Электронный ресурс]. --
+    Электрон. текстовые данные (84008 bytes) --
+    Режим доступа: http://www.ibm.com/developerworks/ru/library/l-qemu/
+
+\bibitem{kvm-ibm}
+    Гипервизоры, виртуализация и облако: Анализ гипервизора KVM
+    [Электронный ресурс]. --
+    Электрон. текстовые данные (79196 bytes) --
+    Режим доступа: http://www.ibm.com/developerworks/ru/library/cl-hypervisorcompare-kvm/
+
+\bibitem{xen-xguru}
+    Руководство пользователя Xen v3.0
+    [Электронный ресурс]. --
+    Электрон. текстовые данные (272945 bytes) --
+    Режим доступа: http://xgu.ru/xen/manual/
+
+\bibitem{lxc-openvz}
+    Контейнеризация на Linux в деталях -- LXC и OpenVZ Часть 2
+    [Электронный ресурс]. --
+    Электрон. текстовые данные (186899 bytes) -- 
+    Режим доступа: http://habrahabr.ru/company/FastVPS/blog/209084/
+
+\bibitem{lxc}
+    Виртуализация на уровне ОС: теория и практика LXC
+    [Электронный ресурс]. --
+    Электрон. текстовые данные (118259 bytes) --
+    Режим доступа: http://creativeyp.com/568-virtualizaciya-na-urovne-os-teoriya-i-praktika-lxc.html
+
+% то что использовал пока
+
 \bibitem{antonova-zaika} Лукъянчук А.Г., Антонова Г.З., Заика Е.В. 
     Положение об организации дипломного проектирования в СевНТУ / 
     Лукъянчук А.Г., Антонова Г.З., Заика Е.В. -- Севастополь: 
@@ -35,24 +91,6 @@
     Михаил Михеев -- Москва: Изд-во ДМК Пресс, 
     2012. -- 504 с.
     
-\bibitem{openvz-tutorial}
-    Руководство по созданию и управлению контейнерами на базе OpenVZ 
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (55237 bytes) -- 
-    Режим доступа: https://github.com/Amet13/openvz-tutorial/blob/master/main.pdf
-
-\bibitem{oracle-db}
-    Каталог программных продуктов семейства Oracle
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (11126315 bytes) --
-    Режим доступа: http://oracle.ocs.ru/files/catalog\_Oracle\_Database\_12C.pdf
-
-\bibitem{dc-tier}
-    Tier: уровни надежности ЦОД и что из этого следует
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (38916 bytes) --
-    Режим доступа: http://www.aboutdc.ru/page/390.php
-
 \bibitem{hp-openvz-xen}
     Performance Evaluation of Virtualization Technologies for Server Consolidation
     [Электронный ресурс]. --
@@ -83,12 +121,6 @@
     Электрон. текстовые данные (839355 bytes) -- 
     Режим доступа: http://www.opennet.ru/docs/RUS/virtuozzo/virtuozzo-linux.html.gz
 
-\bibitem{ibm-virt}
-    Виртуальный Linux. Обзор методов виртуализации, архитектур и реализаций
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (109051 bytes) -- 
-    Режим доступа: http://www.ibm.com/developerworks/ru/library/l-linuxvirt/index.html
-
 \bibitem{ibm-hypervisors}
     Гипервизоры, виртуализация и облако: О гипервизорах, виртуализации систем и о том, как это работает в облачной среде
     [Электронный ресурс]. --
@@ -106,36 +138,6 @@
     [Электронный ресурс]. --
     Электрон. текстовые данные (37869 bytes) -- 
     Режим доступа: http://openvz.org/Performance
-
-\bibitem{lxc-openvz}
-    Контейнеризация на Linux в деталях -- LXC и OpenVZ Часть 2
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (186899 bytes) -- 
-    Режим доступа: http://habrahabr.ru/company/FastVPS/blog/209084/
-
-\bibitem{qemu-ibm}
-    Эмуляция систем с помощью QEMU
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (84008 bytes) --
-    Режим доступа:  http://www.ibm.com/developerworks/ru/library/l-qemu/
-
-\bibitem{kvm-ibm}
-    Гипервизоры, виртуализация и облако: Анализ гипервизора KVM
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (79196 bytes) --
-    Режим доступа: http://www.ibm.com/developerworks/ru/library/cl-hypervisorcompare-kvm/
-
-\bibitem{xen-xguru}
-    Руководство пользователя Xen v3.0
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (272945 bytes) --
-    Режим доступа: http://xgu.ru/xen/manual/
-
-\bibitem{lxc}
-    Виртуализация на уровне ОС: теория и практика LXC
-    [Электронный ресурс]. --
-    Электрон. текстовые данные (118259 bytes) --
-    Режим доступа: http://creativeyp.com/568-virtualizaciya-na-urovne-os-teoriya-i-praktika-lxc.html
 
 \end{thebibliography}
 \endgroup
