--- a/inc/test.tex
+++ b/inc/test.tex
@@ -3,6 +3,13 @@
 
 А это пример ссылки на литературу. \cite{espd-gost}
 
+Пример ссылки на картинку \ref{teste}
+    \begin{figure}[H]
+        \centering
+        \includegraphics[width=\linewidth]{test}
+        \caption{test} \label{teste}
+    \end{figure}
+
 А это код:
 \begin{verbnobox}[\small]
 #!/bin/bash
