Сформировано содержание. Добавлен раздел системного анализа. Добавлен первый принцип, принцип конечной цели.

--- a/inc/3-analyze.tex
+++ b/inc/3-analyze.tex
@@ -1,3 +1,53 @@
-\section{Системный анализ}
+\section{Системный анализ виртуальной инфраструктуры}
+
+На данный момент при анализе и синтезе сложных программных и аппаратных систем все чаще используется системный подход.
+Важным моментом для системного подхода является определение структуры системы --- совокупности связей между элементами системы, отражающих их взаимодействие.
+Совокупность элементов и связей между ними позволяет судить о структуре системы.
+
+Принципы системного анализа --- это некоторые положения общего характера, являющиеся обобщением опыта работы человека со сложными системами.
+Общепринятых формулировок на настоящее время нет, но не все формулировки так или иначе описывают одни и те же понятия.
+Пренебрежение принципами при проектировании любой нетривиальной технической системы, непременно приводит к потерям того или иного характера, от увеличения затрат в процессе проектирования до снижения качества и эффективности конечного продукта.
+
+Системный анализ выполнен в соответствии с \cite{sys-analyz}.
+
+\subsection{Принцип конечной цели}
+
+Принцип конечной цели --- это абсолютный приоритет конечной цели, он имеет несколько правил:
+\begin{itemize}
+  \item Для проведения системного анализа необходимо, в первую очередь, сформировать цель исследования, так как не полностью определенные цели влекут за собой неверные выводы;
+  \item Анализ следует вести на базе уяснения основной цели, что позволит определить ее существенные свойства показателей качества и критериев оценки;
+  \item При синтезе систем любая попытка изменения или совершенствования должна оцениваться относительно конечной цели.
+\end{itemize}
+
+При использовании данного принципа, разрабатываемая виртуальная инфраструктура будет рассматриваться в виде <<черного ящика>>, функционирование которого описывается формулой \ref{blackbox-eq}.
+\begin{equation} \label{blackbox-eq}
+\text{Y=F(X, Z)}
+\end{equation}
+где Y --- выходной вектор системы, который функционально зависит от входного вектора X и вектора внутреннего состояния системы Z (рис. \ref{blackbox-pic}).
+Входными данными (вектор X) будут являться запросы пользователей на обработку инцидентов и запросов на обслуживание.
+Внутреннее состояние системы (вектор Z) представляет собой создание услуг по требованию клиента.
+Выходными данными (вектор Y) будут являться предоставление доступа к услугам клиентам.
+\addimghere{blackbox}{0.6}{Проектируемая система в виде черного ящика}{blackbox-pic}
+
+В соответствии с данным принципом должна быть четко сформулирована конечная цель --- назначение проектируемой системы и сформирован список функций, которые должна выполнять система.
+Кроме того, необходимо определить перечень входных воздействий, на которые реагирует система.
+
+Цель проектирования --- разработка виртуальной инфраструктуры для реализации облачных услуг.
+Список функций проектируемой системы:
+\begin{itemize}
+  \item Ф1 --- прием и регистрация обращений пользователей;
+  \item Ф2 --- идентификация и обработка инцидентов и запросов на обслуживание;
+  \item Ф3 --- создание, смена, обновление и удаление услуг по требованию;
+  \item Ф4 --- предоставление доступа к услугам;
+  \item Ф5 --- мониторинг состояния инфраструктуры.
+\end{itemize}
+
+Перечень входных воздействий на систему:
+\begin{itemize}
+  \item Внесение изменений данных о заявке;
+  \item Мониторинг хода решения.
+\end{itemize}
+
+
 
 \clearpage
