--- a/inc/preamble.tex
+++ b/inc/preamble.tex
@@ -18,6 +18,8 @@
 \setdefaultlanguage{russian}
 
 \usepackage{amssymb,amsfonts,amsmath} % Математика
+\numberwithin{equation}{section} % Формула вида секция.номер
+
 \usepackage{enumerate} % Тонкая настройка списков
 \usepackage{indentfirst} % Красная строка после заголовка
 \usepackage{float} % Расширенное управление плавающими объектами
