--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -56,6 +56,13 @@
     Электрон. текстовые данные (118259 bytes) --
     Режим доступа: http://creativeyp.com/568-virtualizaciya-na-urovne-os-teoriya-i-praktika-lxc.html
 
+\bibitem{sys-analyz}
+    Сергеев Г.Г., Скатков А.В., Мащенко Е.Н.
+    Методические указания <<Процедура системного анализа при проектировании программных систем>>
+    для студентов-дипломников дневной и заочной формы обучения специальности 7.091501 /
+    Сост. Сергеев Г.Г., Скатков А.В., Мащенко Е.Н. -- Севастополь:
+    Изд-во СевНТУ, 2005. -- 32с.
+
 % то что использовал пока
 
 \bibitem{antonova-zaika} Лукъянчук А.Г., Антонова Г.З., Заика Е.В. 
