Добавлен принцип единства

--- a/inc/3-analyze.tex
+++ b/inc/3-analyze.tex
@@ -16,7 +16,8 @@
 \begin{itemize}
   \item Для проведения системного анализа необходимо, в первую очередь, сформировать цель исследования, так как не полностью определенные цели влекут за собой неверные выводы;
   \item Анализ следует вести на базе уяснения основной цели, что позволит определить ее существенные свойства показателей качества и критериев оценки;
-  \item При синтезе систем любая попытка изменения или совершенствования должна оцениваться относительно конечной цели.
+  \item При синтезе систем любая попытка изменения или совершенствования должна оцениваться относительно конечной цели;
+  \item Цель функционирования искусственной системы задается, как правило, системой, в которой исследуемая система является составной частью.
 \end{itemize}
 
 При использовании данного принципа, разрабатываемая виртуальная инфраструктура будет рассматриваться в виде <<черного ящика>>, функционирование которого описывается формулой \ref{blackbox-eq}.
@@ -48,6 +49,37 @@
   \item Мониторинг хода решения.
 \end{itemize}
 
+\subsection{Принцип единства}
 
+Принцип единства --- это совместное рассмотрение системы как целого и как совокупности частей.
+Принцип ориентирован на декомпозицию с сохранением целостных представлений о системе.
+
+На основании функций проектируемой системы, представленных выше, в ней можно выделить следующие подсистемы:
+\begin{enumerate}
+  \item Подсистема взаимодействия с пользователем;
+  \item Подсистема управления услугами;
+  \item Подсистема управления инфраструктурой;
+  \item Подсистема защиты и обеспечения целостности данных.
+\end{enumerate}
+
+На рис. \ref{subsystems} представлена схема взаимодействия между подсистемами.
+\addimghere{subsys}{0.8}{Взаимодействие между подсистемами и их связь с окружающей средой}{subsystems}
+
+Обозначения, приведенные на рис. \ref{subsystems} требуют пояснения:
+\begin{itemize}[label={}]
+  \item a --- информация, предоставляемая пользователем, передается на сервер;
+  \item b --- выходная информация (результат выполнения);
+  \item c --- проверка корректности переданных данных;
+  \item d --- в случае неправильно введенных данных, возвращается управление к подсистеме взаимодействия с пользователем;
+  \item e --- создание услуги;
+  \item f --- возврат информации о созданной услуге;
+  \item g --- обеспечение целостности информации об услуге;
+  \item h --- обеспечение целостности данных пользователя.
+\end{itemize}
+
+На рис. \ref{subsystems-1} представлена структура проектируемой системы в виде ориентированного графа.
+
+Приняты те же обозначения, что приведены выше.
+\addimghere{subsys-1}{0.8}{Структура проектируемой системы, представленная в виде ориентированного графа}{subsystems-1}
 
 \clearpage
