Добавлен принцип связности

--- a/inc/3-analyze.tex
+++ b/inc/3-analyze.tex
@@ -82,4 +82,21 @@
 Приняты те же обозначения, что приведены выше.
 \addimghere{subsys-1}{0.8}{Структура проектируемой системы, представленная в виде ориентированного графа}{subsystems-1}
 
+\subsection{Определение взаимосвязей между подсистемами на основе принципа связности}
+
+Рассмотрение любой части совместно с ее окружением подразумевает проведение процедуры выявления связей между элементами системы и выявление связей со средой.
+В соответствии с этим принципом систему в первую очередь следует рассматривать как часть другой системы, называемой суперсистемой или старшей системой.
+
+Подсистема взаимодействия с пользователем представлена на рис. \ref{user-subsys}.
+\addimghere{user-subsys}{1}{Внутренние и внешние связи подсистемы взаимодействия с пользователем}{user-subsys}
+
+Подсистема управления услугами представлена на рис. \ref{service-subsys}.
+\addimghere{service-subsys}{1}{Внутренние и внешние связи подсистемы управления услугами}{service-subsys}
+
+Подсистема управления инфраструктурой представлена на рис. \ref{infrast-subsys}.
+\addimghere{infrast-subsys}{1}{Внутренние и внешние связи подсистемы управления инфраструктурой}{infrast-subsys}
+
+Подсистема защиты и обеспечения целостности данных представлена на рис. \ref{security-subsys}.
+\addimghere{security-subsys}{1}{Внутренние и внешние связи подсистемы защиты и обеспечения целостности данных}{security-subsys}
+
 \clearpage
