Добавлен принцип модульности

--- a/inc/3-analyze.tex
+++ b/inc/3-analyze.tex
@@ -99,4 +99,15 @@
 Подсистема защиты и обеспечения целостности данных представлена на рис. \ref{security-subsys}.
 \addimghere{security-subsys}{1}{Внутренние и внешние связи подсистемы защиты и обеспечения целостности данных}{security-subsys}
 
+\subsection{Принцип модульности}
+
+Полезно выделение модулей в системе и рассмотрение ее как совокупности модулей.
+Принцип указывает на возможность вместо части системы исследовать совокупность ее входных и выходных воздействий (абстрагирование от излишней детализации).
+
+Принцип модульности для разрабатываемой системы поясняется с помощью рис. \ref{modules}, описывающего разбиение на модули системы взаимодействия с пользователем.
+\addimghere{modules}{1}{Принцип модульности на примере подсистемы взаимодействия с пользователем}{modules}
+
+Излишняя детализация не требуется, поэтому остальные системы на модули принято решение не разбивать.
+
+
 \clearpage
